# ExpansionHunterDenovo

./: .gitignore  COPYRIGHT.txt  README.md
documentation/: 00_Introduction.md  01_Before_you_begin.md  01_Introduction.md  02_Installation.md  03_Case_control_quickstart.md  04_Outlier_quickstart.md  05_Computing_profiles.md  06_Merging_profiles.md  07_Case_control_analysis.md  08_Annotation.md  08_Interpreting_Outlier_Analysis.md  09_Repeat_prioritization_strategies.md
examples/case-control/: example_dataset.casecontrol_locus.tsv  example_dataset.casecontrol_motif.tsv  example_dataset.multisample_profile.json  manifest.tsv  reference.fasta  reference.fasta.fai  run-analysis.sh
examples/case-control/bamlets/: sample1.bam  sample1.bam.bai  sample2.bam  sample2.bam.bai  sample3.bam  sample3.bam.bai  sample4.bam  sample4.bam.bai  sample5.bam  sample5.bam.bai  sample6.bam  sample6.bam.bai  sample7.bam  sample7.bam.bai
examples/case-control/str-profiles/: sample1.locus.tsv  sample1.motif.tsv  sample1.str_profile.json  sample2.locus.tsv  sample2.motif.tsv  sample2.str_profile.json  sample3.anchored_irrs.tsv  sample3.locus.tsv  sample3.motif.tsv  sample3.str_profile.json  sample4.locus.tsv  sample4.motif.tsv  sample4.str_profile.json  sample5.locus.tsv  sample5.motif.tsv  sample5.str_profile.json  sample6.anchored_irrs.tsv  sample6.locus.tsv  sample6.motif.tsv  sample6.str_profile.json  sample7.locus.tsv  sample7.motif.tsv  sample7.str_profile.json
examples/outlier/: example_dataset.multisample_profile.json  example_dataset.outlier_locus.tsv  example_dataset.outlier_motif.tsv  manifest.tsv  reference.fasta  reference.fasta.fai  run-analysis.sh
examples/outlier/bamlets/: sample1.bam  sample1.bam.bai  sample10.bam  sample10.bam.bai  sample11.bam  sample11.bam.bai  sample12.bam  sample12.bam.bai  sample13.bam  sample13.bam.bai  sample14.bam  sample14.bam.bai  sample15.bam  sample15.bam.bai  sample16.bam  sample16.bam.bai  sample17.bam  sample18.bam  sample18.bam.bai  sample19.bam  sample19.bam.bai  sample2.bam  sample2.bam.bai  sample20.bam  sample20.bam.bai  sample21.bam  sample21.bam.bai  sample3.bam  sample3.bam.bai  sample4.bam  sample4.bam.bai  sample5.bam  sample5.bam.bai  sample6.bam  sample6.bam.bai  sample7.bam  sample7.bam.bai  sample8.bam  sample8.bam.bai  sample9.bam  (+1 more)
examples/outlier/str-profiles/: sample1.locus.tsv  sample1.motif.tsv  sample1.str_profile.json  sample10.locus.tsv  sample10.str_profile.json  sample11.locus.tsv  sample11.str_profile.json  sample12.locus.tsv  sample13.locus.tsv  sample13.str_profile.json  sample14.locus.tsv  sample14.str_profile.json  sample15.locus.tsv  sample16.locus.tsv  sample16.str_profile.json  sample17.str_profile.json  sample18.locus.tsv  sample18.str_profile.json  sample19.locus.tsv  sample19.str_profile.json  sample2.locus.tsv  sample20.locus.tsv  sample20.str_profile.json  sample21.locus.tsv  sample21.str_profile.json  sample3.str_profile.json  sample4.locus.tsv  sample4.motif.tsv  sample4.str_profile.json  sample5.locus.tsv  sample5.str_profile.json  sample6.locus.tsv  sample6.str_profile.json  sample7.locus.tsv  sample7.str_profile.json  sample8.locus.tsv  sample8.str_profile.json  sample9.locus.tsv  sample9.str_profile.json
scripts/: annotate_ehdn.sh  casecontrol.py  make-bamlet.py  outlier.py  requirements.txt
scripts/casecontrol/: locusworkflow.py  motifworkflow.py
scripts/core/: common.py  regiontools.py  wilcoxontest.py
scripts/outlier/: locusworkflow.py  motifworkflow.py
scripts/tests/: context.py  test_regions.py  test_wilcoxon.py
source/: .gitignore  CMakeLists.txt  Makefile
source/app/: ExpansionHunterDenovo.cpp  GatherParameters.cpp  GatherParameters.hh  Version.hh
source/classification/: CMakeLists.txt
source/classification/unit_tests/: CMakeLists.txt  classifier_test.cc  irr_finder_test.cc
source/common/: CMakeLists.txt  Interval.cpp  Interval.hh  Manifest.cpp  Manifest.hh  Parameters.hh  SequenceUtils.cpp  SequenceUtils.hh
source/io/: CMakeLists.txt  HtsFileStreamer.cpp  HtsFileStreamer.hh  HtsHelpers.cpp  HtsHelpers.hh  Reference.cpp  Reference.hh
source/merge/: CMakeLists.txt  MergeParameters.cpp  MergeParameters.hh  MergeWorkflow.cpp  MergeWorkflow.hh  MultisampleProfile.cpp  MultisampleProfile.hh
source/outlier/: CMakeLists.txt  OutlierParameters.cpp  OutlierParameters.hh  OutlierWorkflow.cpp  OutlierWorkflow.hh  ZScoreAnalysis.cpp  ZScoreAnalysis.hh
source/profile/: CMakeLists.txt  PairCollector.cpp  PairCollector.hh  ProfileParameters.cpp  ProfileParameters.hh  ProfileWorkflow.cpp  ProfileWorkflow.hh  ReadClassification.cpp  ReadClassification.hh  SampleRunStats.cpp  SampleRunStats.hh
source/purity/: CMakeLists.txt
source/purity/unit_tests/: CMakeLists.txt  purity_test.cc
source/reads/: CMakeLists.txt  IrrFinder.cpp  IrrFinder.hh  Purity.cpp  Purity.hh  Read.cpp  Read.hh
source/reads/unit_tests/: CMakeLists.txt  pair_collector_test.cc
source/region/: CMakeLists.txt  GenomicRegion.cpp  GenomicRegion.hh  ReferenceContigInfo.cpp  ReferenceContigInfo.hh
source/tests/: GenomicRegionTest.cpp  IrrFinderTest.cpp  PurityScoreTest.cpp  SequenceUtilsTest.cpp  UnitTests.cpp
